--- a/index.html
+++ b/index.html
@@ -101,22 +101,25 @@
                     <div class="resume-item">
                         <h2 class="resumr-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resumr-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resumr-item-title">Master in Computer Engineering</h2>
                         <h3 class="resume-item-institute">Harvard University / 2015 - 2017</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
                 <div class="resume-column">
@@ -124,25 +127,28 @@
                     <div class="resume-item">
                         <h2 class="resumr-item-title">Sr. Font End Developer</h2>
                         <h3 class="resume-item-institute">Apple Inc / 2020 - Current</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resumr-item-title">Jr. Font End Developer</h2>
                         <h3 class="resume-item-institute">Dribbble Inc / 2018 - 2022</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                     <hr>
                     <div class="resume-item">
                         <h2 class="resumr-item-title">HTML Developer</h2>
                         <h3 class="resume-item-institute">Adobe Inc / 2017 - 2018</h3>
-                        <p class="resume-item-description">List skill/technologies here. You can change the icon above 
-                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                        <p class="resume-item-description">List skill/technologies here. You can change the icon above
+                            to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.
+                        </p>
                     </div>
                 </div>
-                </div>
+            </div>
             </div>
             <div class="download-cv">
                 <button class="btn-primary">Download CV</button>
@@ -150,7 +156,24 @@
         </section>
     </main>
     <footer>
-
+        <div class="footer-column">
+            <h3 class="section-title">Lets connect</h3>
+            <p class="section-description">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+            <div class="social-links">
+                <a href=""><img src="images/icons/facebook.png" alt=""></a>
+                <a href=""><img src="images/icons/insta.png" alt=""></a>
+                <a href=""><img src="images/icons/twitter.png" alt=""></a>
+            </div>
+        </div>
+        <div class="footer-column">
+            <h3 class="section-title">Lets Message Me</h3>
+            <form class="contact" action="">
+                <input type="text" placeholder="Your Name">
+                <input type="email" placeholder="Your Email">
+                <textarea name="" placeholder="Message" id="" cols="30" rows="10"></textarea>
+                <input class="btn-primary" type="submit" value="Submit">
+            </form>
+        </div>
     </footer>
 </body>
 
